fixed css, text disappeared behind footer

--- a/css/master.css
+++ b/css/master.css
@@ -10,6 +10,7 @@ body {
 
 .content {
   padding-top: 160px;
+  padding-bottom: 70px;
   font-size: 14;
   font-family: Helvetica Narrow, Verdana, Arial, Sans-serif;
   line-height: 140%;
